# mpllibs

./: .gitignore  CMakeLists.txt  build.sh
doc/: index.txt
libs/: CMakeLists.txt
libs/metamonad/doc/: already_lazy.txt  has_get_value.txt  is_exception.txt
libs/metamonad/example/: CMakeLists.txt
libs/metaparse/doc/: sequence.txt
libs/xlxpressive/: CMakeLists.txt
libs/xlxpressive/doc/: CMakeLists.txt  index.txt
libs/xlxpressive/example/: CMakeLists.txt
libs/xlxpressive/example/accept_any/: CMakeLists.txt  main.cpp
libs/xlxpressive/example/comparison/: CMakeLists.txt  README  main.cpp
libs/xlxpressive/test/: .gitignore  CMakeLists.txt  dummy.cpp  gen_test.pl  gen_test.regress.pl  grammar.cpp  main.cpp  regress.txt  regress_one.txt  search.hpp  search.regress.hpp  test.json  test.txt  tester.cpp
mpllibs/metamonad/: mempty.hpp
mpllibs/metaparse/: sequence.hpp
mpllibs/xlxpressive/: grammar.txt  regexp_grammar.hpp  xlxpressive.hpp
